--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,18 +8,121 @@ output:
 
 ## Loading and preprocessing the data
 
+The following code is needed to load the activity.csv dataset.
 
+```{r loaddata}
+activity <- read.csv("activity.csv")
+activity$date <- as.Date(as.character(activity$date), "%Y-%m-%d")
+dailystep <- aggregate(activity$steps, by=list(activity$date), FUN=sum)
+intervalstep <- aggregate(activity$steps, by=list(activity$interval), FUN=mean, 
+                          na.rm=TRUE)
+names(dailystep) <- c("date", "steps")
+names(intervalstep) <- c("interval", "steps")
+```
 
 ## What is mean total number of steps taken per day?
 
+The following shows the histogram of the average total number of steps taken 
+per day.
 
+```{r histogram, echo=FALSE}
+hist(dailystep$steps, xlab = "No. of Steps", ylab = "Number of days",
+     main = "Histogram of no. of steps taken per day", ylim = c(0, 30))
+meanstep <- round(mean(dailystep$steps, na.rm = TRUE), digits=2)
+medianstep <- round(median(dailystep$steps, na.rm = TRUE), digits=2)
+```
+
+The mean of total number of steps taken per day is 
+**`r format(meanstep, scientific=FALSE, big.mark=',')`** 
+and the median of total number of steps taken per day is 
+**`r format(medianstep, scientific=FALSE, big.mark=',')`**.
 
 ## What is the average daily activity pattern?
 
+The following diagram shows a line plot of the 5-minute interval (x-axis) and 
+the average number of steps taken, averaged across all days (y-axis).
 
+```{r lineplot, echo=FALSE}
+library("ggplot2")
+g <- ggplot(intervalstep, aes(interval, steps))
+g + geom_line(color="blue") + labs(x = "Interval") + labs(y = "Number of steps")
+maxstep <- subset(intervalstep, steps==max(intervalstep$steps))
+```
+
+The 5-minute interval **`r maxstep$interval`**, on average across all the days 
+in the dataset, contains the maximum number of steps. The maximum number of step
+is **`r format(round(maxstep$steps, digits=2), scientific=FALSE, big.mark=',')`**.
 
 ## Imputing missing values
 
+There are **`r nrow(activity[is.na(activity$steps),])`** missing values in the 
+dataset.  
 
+I would like to use **the median for that 5-minute interval** for filling in all
+the missing values in the dataset.  
+
+To create the new dataset, I ran the following code. The first 20 lines of the 
+result is shown at the second block.
+
+```{r fillNAvalues}
+missingactivity <- activity[is.na(activity$steps),]
+nonmissingactivity <- activity[!is.na(activity$steps),]
+medianintervalstep <- aggregate(activity$steps, by=list(activity$interval), 
+                                FUN=median, na.rm=TRUE)
+names(medianintervalstep) <- c("interval", "steps")
+filledactivity <- merge(x = missingactivity, y = medianintervalstep, 
+                        by = "interval", all.x = TRUE)
+filledactivity$steps = filledactivity$steps.y
+filledactivity <- filledactivity[,c("interval","date","steps")]
+filledactivity <- rbind(filledactivity, nonmissingactivity)
+head(filledactivity, 20)
+```
+There are **`r nrow(filledactivity[is.na(filledactivity$steps),])`** missing 
+values in the dataset after filling missing values. 
+
+The following shows the histogram of the average total number of steps taken 
+per day (with missing value being filled).
+
+```{r filledhistogram, echo=FALSE}
+filleddailystep <- aggregate(filledactivity$steps, by=list(activity$date), 
+                             FUN=sum)
+names(filleddailystep) <- c("date", "steps")
+hist(filleddailystep$steps, xlab = "Number of steps", ylab = "Number of days",
+     main = "Histogram of no. of steps taken per day (without missing data)", 
+     ylim = c(0, 30))
+filledmeanstep <- round(mean(filleddailystep$steps, na.rm = TRUE), digits=2)
+filledmedianstep <- round(median(filleddailystep$steps, na.rm = TRUE), digits=2)
+```
+
+After filling the missing value, 
+the mean of total number of steps taken per day changes from 
+**`r format(meanstep, scientific=FALSE, big.mark=',')`** to 
+**`r format(filledmeanstep, scientific=FALSE, big.mark=',')`** 
+and the median of total number of steps taken per day changes from
+**`r format(medianstep, scientific=FALSE, big.mark=',')`** to
+**`r format(filledmedianstep, scientific=FALSE, big.mark=',')`**.
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+The new factor variable **week** is created, the following shows the first 6 
+records of the dataset.
+
+```{r weekday, echo=FALSE}
+weekend <- weekdays(filledactivity$date, abbreviate=TRUE) %in% c("Sat","Sun")
+filledactivity[weekend, "week"] <- "weekend"
+filledactivity[!weekend, "week"] <- "weekday"
+head(filledactivity)
+```
+
+The following shows the panel plot of the 5-minute interval and the average 
+number of steps taken, averaged across all weekday days or weekend days.
+
+```{r weekdayplot, echo=FALSE}
+intervalweekstep <- with(filledactivity, aggregate(steps, 
+                                                   by=list(interval, week), 
+                                                   FUN=mean))
+names(intervalweekstep) <- c("interval", "week", "steps")
+g <- ggplot(intervalweekstep, aes(interval, steps))
+g + geom_line(color="blue") + facet_wrap(~ week, nrow=2) + labs(x = "Interval") + 
+        labs(y = "Number of steps")
+```
